[gd_scene load_steps=37 format=3 uid="uid://bmnynxptrxgw0"]

[ext_resource type="Script" uid="uid://bf8sqhdsmimxx" path="res://scripts/cooking/coffe_stand/coffe_stand.gd" id="1_knpts"]
[ext_resource type="Texture2D" uid="uid://bjenthgy3qsr1" path="res://assets/sprites/cooking/background_2.png" id="1_qp4qh"]
[ext_resource type="Texture2D" uid="uid://3es8m30l5twe" path="res://assets/sprites/cooking/coffe_stand/cup_idle.png" id="2_0dbvb"]
[ext_resource type="Texture2D" uid="uid://cqglussiwecf3" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_added_powder/frame0000.png" id="2_yqn3q"]
[ext_resource type="PackedScene" uid="uid://bg1dy0qdj3pif" path="res://scenes/cooking/ingredient.tscn" id="3_knpts"]
[ext_resource type="Texture2D" uid="uid://bvgj67sdss4u1" path="res://assets/sprites/cooking/coffe_stand/coffe_powder.png" id="3_mjf04"]
[ext_resource type="Texture2D" uid="uid://cy8m8vx5py5od" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_added_powder/frame0001.png" id="3_qf448"]
[ext_resource type="Texture2D" uid="uid://d1ax4y0xbb14h" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_added_powder/frame0002.png" id="4_86ayl"]
[ext_resource type="Texture2D" uid="uid://cylfsxddvvoqu" path="res://assets/sprites/cooking/coffe_stand/cup_with_coffe.png" id="4_dlof1"]
[ext_resource type="Texture2D" uid="uid://bywwqk56p5t4y" path="res://assets/sprites/cooking/coffe_stand/spoon.png" id="4_knpts"]
[ext_resource type="Texture2D" uid="uid://c221rg3gwhemu" path="res://assets/sprites/cooking/coffe_stand/water.png" id="5_5k01k"]
[ext_resource type="Texture2D" uid="uid://u4wqnsbtj17k" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_added_powder/frame0003.png" id="5_ih43j"]
[ext_resource type="Texture2D" uid="uid://rwq3khqsabhv" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_added_powder/frame0004.png" id="6_4vae5"]
[ext_resource type="PackedScene" uid="uid://doo13f5dqeox0" path="res://scenes/cooking/food_finished.tscn" id="8_jx4p8"]
[ext_resource type="Texture2D" uid="uid://bo0w33qohd542" path="res://assets/sprites/cooking/mouse_custom.png" id="9_5rvcd"]
[ext_resource type="PackedScene" uid="uid://biya4twh4smpg" path="res://modules/slider_wheel/slider_wheel.tscn" id="10_5rvcd"]
[ext_resource type="Texture2D" uid="uid://drrx2o0k81ysr" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0000.png" id="12_tbs1o"]
[ext_resource type="Texture2D" uid="uid://m3od7jpriwxs" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0001.png" id="13_1cnas"]
[ext_resource type="Texture2D" uid="uid://cjbjgopsfobi2" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0002.png" id="14_laxxa"]
[ext_resource type="Texture2D" uid="uid://ck0r3seg8mvba" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0003.png" id="15_vx0ae"]
[ext_resource type="Texture2D" uid="uid://m580th04mr4k" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0004.png" id="16_ic5ua"]
[ext_resource type="Texture2D" uid="uid://7ohhda8fd0k1" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0000.png" id="16_lttec"]
[ext_resource type="Texture2D" uid="uid://ctkls2sgnyieu" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0001.png" id="17_0tusg"]
[ext_resource type="Texture2D" uid="uid://c2h1m6a7f4r3k" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0005.png" id="17_gvpfw"]
[ext_resource type="Texture2D" uid="uid://detowm1rk8t4q" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0006.png" id="18_1wqw8"]
[ext_resource type="Texture2D" uid="uid://20143q52rwsv" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0002.png" id="18_r2mci"]
[ext_resource type="Texture2D" uid="uid://do6qniek7wud0" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0007.png" id="19_08jk6"]
[ext_resource type="Texture2D" uid="uid://gphofw3vcb16" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0003.png" id="19_wau12"]
[ext_resource type="Texture2D" uid="uid://iqb5gpr7re7q" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0004.png" id="20_mnbyy"]
[ext_resource type="Texture2D" uid="uid://bfc7nem523c65" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_watered/0008.png" id="20_t2urb"]
[ext_resource type="Texture2D" uid="uid://skutq5ct3aqs" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0005.png" id="21_0u6ob"]
[ext_resource type="Texture2D" uid="uid://qliof33700eh" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0006.png" id="22_sog4y"]
[ext_resource type="Texture2D" uid="uid://dursp2unc0c4f" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0007.png" id="23_ywcra"]
[ext_resource type="Texture2D" uid="uid://cerfletqlgr7c" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0008.png" id="24_k21mr"]
[ext_resource type="Texture2D" uid="uid://cdybf8orc6lgk" path="res://assets/sprites/cooking/coffe_stand/animations/coffe_stirred/frame0009.png" id="25_1a1ap"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pjbm8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yqn3q")
}, {
"duration": 1.0,
"texture": ExtResource("3_qf448")
}, {
"duration": 1.0,
"texture": ExtResource("4_86ayl")
}, {
"duration": 1.0,
"texture": ExtResource("5_ih43j")
}, {
"duration": 1.0,
"texture": ExtResource("6_4vae5")
}],
"loop": false,
"name": &"add_powder",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_tbs1o")
}, {
"duration": 1.0,
"texture": ExtResource("13_1cnas")
}, {
"duration": 1.0,
"texture": ExtResource("14_laxxa")
}, {
"duration": 1.0,
"texture": ExtResource("15_vx0ae")
}, {
"duration": 1.0,
"texture": ExtResource("16_ic5ua")
}, {
"duration": 1.0,
"texture": ExtResource("17_gvpfw")
}, {
"duration": 1.0,
"texture": ExtResource("18_1wqw8")
}, {
"duration": 1.0,
"texture": ExtResource("19_08jk6")
}, {
"duration": 1.0,
"texture": ExtResource("20_t2urb")
}],
"loop": false,
"name": &"add_water",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_lttec")
}, {
"duration": 1.0,
"texture": ExtResource("17_0tusg")
}, {
"duration": 1.0,
"texture": ExtResource("18_r2mci")
}, {
"duration": 1.0,
"texture": ExtResource("19_wau12")
}, {
"duration": 1.0,
"texture": ExtResource("20_mnbyy")
}, {
"duration": 1.0,
"texture": ExtResource("21_0u6ob")
}, {
"duration": 1.0,
"texture": ExtResource("22_sog4y")
}, {
"duration": 1.0,
"texture": ExtResource("23_ywcra")
}, {
"duration": 1.0,
"texture": ExtResource("24_k21mr")
}, {
"duration": 1.0,
"texture": ExtResource("25_1a1ap")
}],
"loop": false,
"name": &"stir",
"speed": 12.0
}]

[node name="CoffeStand" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knpts")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_qp4qh")

[node name="cup" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 192.0
offset_top = 87.0
offset_right = 280.0
offset_bottom = 218.0
texture = ExtResource("2_0dbvb")

[node name="coffe_state" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 87.0
offset_right = 280.0
offset_bottom = 218.0
texture = ExtResource("4_dlof1")

[node name="coffe_powder" parent="." instance=ExtResource("3_knpts")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 312.0
offset_top = 122.0
offset_right = 373.0
offset_bottom = 181.0
texture = ExtResource("3_mjf04")

[node name="spoon" parent="." instance=ExtResource("3_knpts")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 347.0
offset_top = 176.0
offset_right = 411.0
offset_bottom = 231.0
texture = ExtResource("4_knpts")

[node name="water" parent="." instance=ExtResource("3_knpts")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 418.0
offset_top = 141.0
offset_right = 447.0
offset_bottom = 187.0
texture = ExtResource("5_5k01k")

[node name="FoodFinished" parent="." instance=ExtResource("8_jx4p8")]
layout_mode = 1

[node name="prevent_input" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="coffe_stand_slider" parent="." instance=ExtResource("10_5rvcd")]
unique_name_in_owner = true
offset_left = 201.0
offset_top = -94.0
offset_right = 201.0
offset_bottom = -94.0

[node name="mouse" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 182.0
offset_right = 453.0
offset_bottom = 195.0
mouse_filter = 2
texture = ExtResource("9_5rvcd")

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 87)
sprite_frames = SubResource("SpriteFrames_pjbm8")
animation = &"add_water"
centered = false
